docs/04-Android/older/2.3.0/player/player-api/player-api/com.deezer.sdk.player.exception/index.md
//[player-api](../../index.md)/[com.deezer.sdk.player.exception](index.md)

# Package com.deezer.sdk.player.exception

## Types

| Name                                                                                                   | Summary                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| ------------------------------------------------------------------------------------------------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [DeezerOfflineException](-deezer-offline-exception/index.md)                                           | [androidJvm]<br/>class [DeezerOfflineException](-deezer-offline-exception/index.md)(content: [DeezerDownloadable](../com.deezer.sdk.player.model/-deezer-downloadable/index.md), type: [DeezerOfflineExceptionType](-deezer-offline-exception-type/index.md)) : [Exception](https://developer.android.com/reference/kotlin/java/lang/Exception.html)<br/>Exception thrown when offline synchronization of a **_Deezer_** content encounters an error                                                                                               |
| [DeezerOfflineExceptionType](-deezer-offline-exception-type/index.md)                                  | [androidJvm]<br/>enum [DeezerOfflineExceptionType](-deezer-offline-exception-type/index.md) : [Enum](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-enum/index.html)&lt;[DeezerOfflineExceptionType](-deezer-offline-exception-type/index.md)&gt; <br/>Actual type of offline synchronization exception                                                                                                                                                                                                                                      |
| [DeezerPlayerException](-deezer-player-exception/index.md)                                             | [androidJvm]<br/>class [DeezerPlayerException](-deezer-player-exception/index.md)(type: [DeezerPlayerExceptionType](-deezer-player-exception-type/index.md), subtype: [DeezerPlayerExceptionSubType](-deezer-player-exception-sub-type/index.md)) : [Exception](https://developer.android.com/reference/kotlin/java/lang/Exception.html)<br/>Exception thrown when the **_Player of Deezer SDK_** encounters an error in the fetching or the playback of a track                                                                                   |
| [DeezerPlayerExceptionContext](-deezer-player-exception-context/index.md)                              | [androidJvm]<br/>class [DeezerPlayerExceptionContext](-deezer-player-exception-context/index.md)(track: [TrackDeezerPlayable](../com.deezer.sdk.player.model/-track-deezer-playable/index.md), index: [Int](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-int/index.html), exception: [DeezerPlayerException](-deezer-player-exception/index.md))<br/>Context surrounding the throw of a [DeezerPlayerException](-deezer-player-exception/index.md)                                                                                         |
| [DeezerPlayerExceptionSubType](-deezer-player-exception-sub-type/index.md)                             | [androidJvm]<br/>enum [DeezerPlayerExceptionSubType](-deezer-player-exception-sub-type/index.md) : [Enum](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-enum/index.html)&lt;[DeezerPlayerExceptionSubType](-deezer-player-exception-sub-type/index.md)&gt; <br/>Secondary type of player exception. It adds an additional precision to a [DeezerPlayerExceptionType](-deezer-player-exception-type/index.md).                                                                                                                               |
| [DeezerPlayerExceptionType](-deezer-player-exception-type/index.md)                                    | [androidJvm]<br/>enum [DeezerPlayerExceptionType](-deezer-player-exception-type/index.md) : [Enum](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-enum/index.html)&lt;[DeezerPlayerExceptionType](-deezer-player-exception-type/index.md)&gt; <br/>Primary type of player exception.                                                                                                                                                                                                                                                         |
| [IllegalDeezerDownloadableInstanceException](-illegal-deezer-downloadable-instance-exception/index.md) | [androidJvm]<br/>class [IllegalDeezerDownloadableInstanceException](-illegal-deezer-downloadable-instance-exception/index.md) : [IllegalArgumentException](https://developer.android.com/reference/kotlin/java/lang/IllegalArgumentException.html)<br/>Exception thrown when methods of [com.deezer.sdk.player.api.DeezerOfflineService](../com.deezer.sdk.player.api/-deezer-offline-service/index.md) are provided with an unknown (custom) implementation of [DeezerDownloadable](../com.deezer.sdk.player.model/-deezer-downloadable/index.md) |
