docs/04-Android/older/2.5.0/player/player-api/player-api/com.deezer.sdk.player.exception/index.md
//[player-api](../../index.md)/[com.deezer.sdk.player.exception](index.md)

# Package com.deezer.sdk.player.exception

## Types

| Name                                                                                                   | Summary                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| ------------------------------------------------------------------------------------------------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [DeezerOfflineException](-deezer-offline-exception/index.md)                                           | [androidJvm]<br/>class [DeezerOfflineException](-deezer-offline-exception/index.md)(content: [DeezerDownloadable](../com.deezer.sdk.player.model/-deezer-downloadable/index.md), type: [DeezerOfflineExceptionType](-deezer-offline-exception-type/index.md)) : [Exception](https://developer.android.com/reference/kotlin/java/lang/Exception.html)<br/>Exception thrown when offline synchronization of a **_Deezer_** content encounters an error                                                                                               |
| [DeezerOfflineExceptionType](-deezer-offline-exception-type/index.md)                                  | [androidJvm]<br/>enum [DeezerOfflineExceptionType](-deezer-offline-exception-type/index.md) : [Enum](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-enum/index.html)&lt;[DeezerOfflineExceptionType](-deezer-offline-exception-type/index.md)&gt; <br/>Actual type of offline synchronization exception                                                                                                                                                                                                                                      |
| [DeezerPlayerException](-deezer-player-exception/index.md)                                             | [androidJvm]<br/>class [DeezerPlayerException](-deezer-player-exception/index.md)(type: [DeezerPlayerExceptionType](-deezer-player-exception-type/index.md), subtype: [DeezerPlayerExceptionSubType](-deezer-player-exception-sub-type/index.md)) : [Exception](https://developer.android.com/reference/kotlin/java/lang/Exception.html)<br/>Exception thrown when the **_Player of Deezer SDK_** encounters an error in the fetching or the playback of a track                                                                                   |
| [DeezerPlayerExceptionContext](-deezer-player-exception-context/index.md)                              | [androidJvm]<br/>class [DeezerPlayerExceptionContext](-deezer-player-exception-context/index.md)(track: [TrackDeezerPlayable](../com.deezer.sdk.player.model/-track-deezer-playable/index.md), index: [Int](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-int/index.html), exception: [DeezerPlayerException](-deezer-player-exception/index.md))<br/>Context surrounding the throw of a [DeezerPlayerException](-deezer-player-exception/index.md)                                                                                         |
| [DeezerPlayerExceptionSubType](-deezer-player-exception-sub-type/index.md)                             | [androidJvm]<br/>enum [DeezerPlayerExceptionSubType](-deezer-player-exception-sub-type/index.md) : [Enum](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-enum/index.html)&lt;[DeezerPlayerExceptionSubType](-deezer-player-exception-sub-type/index.md)&gt; <br/>Secondary type of player exception. It adds an additional precision to a [DeezerPlayerExceptionType](-deezer-player-exception-type/index.md).                                                                                                                               |
| [DeezerPlayerExceptionType](-deezer-player-exception-type/index.md)                                    | [androidJvm]<br/>enum [DeezerPlayerExceptionType](-deezer-player-exception-type/index.md) : [Enum](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-enum/index.html)&lt;[DeezerPlayerExceptionType](-deezer-player-exception-type/index.md)&gt; <br/>Primary type of player exception.                                                                                                                                                                                                                                                         |
| [DeezerQueueException](-deezer-queue-exception/index.md)                                               | [androidJvm]<br/>sealed class [DeezerQueueException](-deezer-queue-exception/index.md) : [Exception](https://developer.android.com/reference/kotlin/java/lang/Exception.html)<br/>Base exception for exception raised when making an action on the queue                                                                                                                                                                                                                                                                                           |
| [DeezerQueueFetchingException](-deezer-queue-fetching-exception/index.md)                              | [androidJvm]<br/>class [DeezerQueueFetchingException](-deezer-queue-fetching-exception/index.md)(playable: [DeezerPlayable](../com.deezer.sdk.player.model/-deezer-playable/index.md)) : [DeezerQueueException](-deezer-queue-exception/index.md)<br/>Exception raised when the fetching of the content associated to the [playable](-deezer-queue-fetching-exception/playable.md) has encountered an error in the **Deezer SDK Player**. Reason could be linked to the network, the parsing of the content etc.                                   |
| [DeezerQueueIdNotFoundException](-deezer-queue-id-not-found-exception/index.md)                        | [androidJvm]<br/>class [DeezerQueueIdNotFoundException](-deezer-queue-id-not-found-exception/index.md)(playable: [DeezerPlayable](../com.deezer.sdk.player.model/-deezer-playable/index.md)) : [DeezerQueueException](-deezer-queue-exception/index.md)<br/>Exception raised when no content match the given id and type of the [playable](-deezer-queue-id-not-found-exception/playable.md)                                                                                                                                                       |
| [DeezerQueueNotEditableException](-deezer-queue-not-editable-exception/index.md)                       | [androidJvm]<br/>class [DeezerQueueNotEditableException](-deezer-queue-not-editable-exception/index.md) : [DeezerQueueException](-deezer-queue-exception/index.md)<br/>Exception raised when an action to alter the queue (add/remove) is applied on a non editable queue in the **Deezer SDK Player**                                                                                                                                                                                                                                             |
| [IllegalDeezerDownloadableInstanceException](-illegal-deezer-downloadable-instance-exception/index.md) | [androidJvm]<br/>class [IllegalDeezerDownloadableInstanceException](-illegal-deezer-downloadable-instance-exception/index.md) : [IllegalArgumentException](https://developer.android.com/reference/kotlin/java/lang/IllegalArgumentException.html)<br/>Exception thrown when methods of [com.deezer.sdk.player.api.DeezerOfflineService](../com.deezer.sdk.player.api/-deezer-offline-service/index.md) are provided with an unknown (custom) implementation of [DeezerDownloadable](../com.deezer.sdk.player.model/-deezer-downloadable/index.md) |
| [UnsupportedDeezerPlayableException](-unsupported-deezer-playable-exception/index.md)                  | [androidJvm]<br/>class [UnsupportedDeezerPlayableException](-unsupported-deezer-playable-exception/index.md)(playable: [DeezerPlayable](../com.deezer.sdk.player.model/-deezer-playable/index.md)) : [DeezerQueueException](-deezer-queue-exception/index.md)<br/>Exception raised on an attempt to load an unsupported [DeezerPlayable](../com.deezer.sdk.player.model/-deezer-playable/index.md) in the queue list in the **Deezer SDK Player**                                                                                                  |
